--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Index</h1>
+<html>
+	<head>
+		<meta http-equiv="refresh" content="0;URL='http://thetudors.example.com/'" />    
+	</head>
+	<body>
+		<h1>Index</h1>
+	</body>
+</html>
