--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0;URL='http://thetudors.example.com/'" />    
+		<meta http-equiv="refresh" content="0;URL='http://saktibuana.herokuapp.com/'" />    
 	</head>
 	<body>
 		<h1>Index</h1>
